--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 <body>
     
     <div class="container">
-        <header>Speech Recognition using JS</header>
+        <header>Speech Recognition</header>
         <div class="clock"></div>
         <div class="speech-area">
             <div class="words" contenteditable=""></div>
         </div>
         <div>
-            <h2>Click CTRL + S to save</h2>
+            <h2>Click CTRL + S buttons to save</h2>
         </div>
     </div>
     
     <footer>
-        <p>Made with ❤️ by AK Studios</p>
+        <p> © Developed by Ak Studios</p>
     </footer>
 
     <script src="script.js"></script>
