Audio from device functionality checking

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="words" contenteditable=""></div>
         </div>
         <div>
+            <button id="start-button">Start Audio Processing</button>
             <h2>Click CTRL + S buttons to save</h2>
         </div>
     </div>
