Button added, UI Changed

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     
     <div class="container">
-        <header>Speech Recognition</header>
+        <header class="header-container">Speech Recognition</header>
         <div class="clock"></div>
         <div class="speech-area">
             <div class="words" contenteditable=""></div>
         </div>
-        <div>
-            <h2>Click CTRL + S buttons to save</h2>
+        <div class="btn-container">
+            <button>save</button>
         </div>
     </div>
     
